# pointcloud_manager

./: CMakeLists.txt  README.md  package.xml
include/pointcloud_manager/: concatenator.hpp  lidartopic.hpp  subscriber.hpp
launch/: pointcloud_manager_launch.py
src/: concatenator.cpp  lidartopic.cpp  main.cpp  pcl_subscribe.cpp  subscriber.cpp
